--- a/Notebooks/Kidney_disease.ipynb
+++ b/Notebooks/Kidney_disease.ipynb
@@ -38,7 +38,7 @@
         "from sklearn.model_selection import GridSearchCV\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "from sklearn.model_selection import train_test_split\n",
-        "import matplotlib.pyplot as plt\n",
+        "import matplotlib.pyplot as plt ##\n",
         "from sklearn.preprocessing import StandardScaler,normalize,MinMaxScaler\n",
         "from sklearn.preprocessing import OrdinalEncoder\n",
         "from sklearn.feature_selection import RFECV\n",
